--- a/spirit-content/themes/default/header.html
+++ b/spirit-content/themes/default/header.html
@@ -12,7 +12,7 @@
 <body>
 
 <header>
-    <h1>{{title}}</h1>
+    <h1><a href="{{baseUrl}}">{{title}}</a></h1>
     <h2>{{subtitle}}</h2>
 </header>
 
