--- a/static/index.html
+++ b/static/index.html
@@ -5,9 +5,11 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <title>Spirit</title>
     <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <link rel="stylesheet" href="https://rsms.me/inter/inter.css" />
     <link rel="stylesheet" type="text/css" media="screen" href="./main.css" />
+    <script src="./main.js"></script>
   </head>
   <body>
-    <script src="./main.js"></script>
+    <header-bar no-back>Journeys</header-bar>
   </body>
 </html>
