--- a/static/index.html
+++ b/static/index.html
@@ -10,6 +10,17 @@
     <script src="./main.js"></script>
   </head>
   <body>
-    <header-bar no-back>Journeys</header-bar>
+    <div id="root">
+      <header-bar no-back>Journeys</header-bar>
+
+      <journey-list text="2025">
+        <journey-list-item img-src="./samples/IMG_9404.jpeg">
+          Osaka
+        </journey-list-item>
+        <journey-list-item img-src="./samples/IMG_8260.jpeg">
+          Kyoto
+        </journey-list-item>
+      </journey-list>
+    </div>
   </body>
 </html>
