--- a/static/index.html
+++ b/static/index.html
@@ -15,6 +15,7 @@
 
       <photo-feed>
         <photo-feed-item
+          id="IMG_8260"
           imgsrc="./samples/IMG_8260.jpeg"
           location="Kyoto, Japan"
           date="2025-11-25"
@@ -24,6 +25,7 @@
         </photo-feed-item>
 
         <photo-feed-item
+          id="IMG_9404"
           imgsrc="./samples/IMG_9404.jpeg"
           location="Osaka, Japan"
           date="2025-12-03"
