--- a/static/index.html
+++ b/static/index.html
@@ -16,20 +16,20 @@
       <photo-feed>
         <photo-feed-item
           id="IMG_8260"
-          imgsrc="./samples/IMG_8260.jpeg"
           location="Kyoto, Japan"
           date="2025-11-25"
         >
+          <img slot="img" src="./samples/IMG_8260.jpeg" alt="" />
           <p>A rickshaw under a beautiful tori</p>
           <p><a href="#">#rickshaw</a> <a href="#">#tori</a></p>
         </photo-feed-item>
 
         <photo-feed-item
           id="IMG_9404"
-          imgsrc="./samples/IMG_9404.jpeg"
           location="Osaka, Japan"
           date="2025-12-03"
         >
+          <img slot="img" src="./samples/IMG_9404.jpeg" alt="" />
           <p>The majestic Osaka castle</p>
           <p><a href="#">#castle</a> <a href="#">#architecture</a></p>
         </photo-feed-item>
