Improve image set styles

--- a/static/index.html
+++ b/static/index.html
@@ -21,11 +21,22 @@
         >
           <photo-feed-imageset slot="img">
             <img src="./samples/IMG_8260.jpeg" alt="" />
-            <img src="./samples/IMG_9404.jpeg" alt="" />
             <img src="./samples/IMG_8107.jpeg" alt="" />
           </photo-feed-imageset>
+
           <p>A rickshaw under a beautiful tori</p>
           <p><a href="#">#rickshaw</a> <a href="#">#tori</a></p>
+        </photo-feed-item>
+
+        <photo-feed-item
+          id="IMG_9404"
+          location="Osaka, Japan"
+          date="2025-12-03"
+        >
+          <img slot="img" src="./samples/IMG_9404.jpeg" alt="" />
+
+          <p>The majestic Osaka castle</p>
+          <p><a href="#">#castle</a> <a href="#">#architecture</a></p>
         </photo-feed-item>
       </photo-feed>
     </div>
