Eliminate noBack prop

--- a/static/index.html
+++ b/static/index.html
@@ -11,7 +11,7 @@
   </head>
   <body>
     <div id="root">
-      <header-bar>Japan 2025</header-bar>
+      <header-bar back-href="#">Japan 2025</header-bar>
 
       <photo-feed>
         <photo-feed-item
