Copy necessary files when compiling

--- a/sample/japan-2025/index.html
+++ b/sample/japan-2025/index.html
@@ -6,13 +6,13 @@
     <title>Japan 2025</title>
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <link rel="stylesheet" href="https://rsms.me/inter/inter.css" />
-    <script src="../../main.js"></script>
+    <script src="../main.js"></script>
   </head>
   <body>
     <global-style></global-style>
 
     <div id="root">
-      <header-bar back-href="../../">Japan 2025</header-bar>
+      <header-bar back-href="../">Japan 2025</header-bar>
 
       <markdown-content><p>In 2025 I went to Kyoto and Osaka.</p>
 </markdown-content>
