Detect new photos in a journey

--- a/sample/japan-2025/index.html
+++ b/sample/japan-2025/index.html
@@ -14,7 +14,7 @@
     <div id="root">
       <header-bar back-href="../">Japan 2025</header-bar>
 
-      <markdown-content><p>In 2025 I went to Kyoto and Osaka.</p>
+      <markdown-content><p>Making memories in Japan.</p>
 </markdown-content>
 
       <photo-feed>
@@ -29,7 +29,7 @@
       
         <img src="./IMG_8260.jpeg" alt="" />
       </photo-feed-imageset>
-          <p>Went to Arashiyama Bamboo forest early in the morning today.</p>
+          <p>The beautiful Arashiyama Bamboo Grove in the morning</p>
         </photo-feed-item>
       
         <photo-feed-item
@@ -39,7 +39,7 @@
           date="2025-11-28"
         >
           <img slot="img" src="./IMG_9404.jpeg" alt="" />
-          <p>The majestic Osaka castle</p>
+          <p>The majestic Osaka castle standing tall against the sky</p>
         </photo-feed-item>
       </photo-feed></div>
   </body>
