Create sample index file

--- a/sample/index.html
+++ b/sample/index.html
@@ -14,7 +14,9 @@
     <div id="root">
       <header-bar>Spirit</header-bar>
 
-      <markdown-content><p>This is a showcase of my photos.</p>
+      <markdown-content><p>Welcome to your new photo journal! To get started, create a new folder for each
+journey and add your photos there. Each folder and new photos will be
+automatically detected and added to the journal.</p>
 </markdown-content>
 
       
